Omite el boton de confirmacion al logear el alert.js Redireccione cuando el login es exitoso al dashboar el loginController Serpare los nombres del usuario en login controller para mostralos en el topBar
Anadi Una barra de processos en la funcion sendFormAjax en alert.js
Cambie a serialize para recoger los compos de los form en alert.js

Anadi iconos de usuario
Iconos diseñados por <a href="https://www.flaticon.es/autores/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.es/" title="Flaticon"> www.flaticon.es</a>

--- a/view/css/sb-admin-2.css
+++ b/view/css/sb-admin-2.css
@@ -10583,6 +10583,11 @@ a:focus {
   }
 }
 
+.bg-user-image {
+  background-position: center;
+  background-size: cover;
+}
+
 .bg-login-image {
   background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
   background-position: center;
