Agregue icono de load en el buscador cie 10 del modal registros casos epidemi Agregue otro pisible icono load en la carpeta imagenes Agregue codigo para evitar que se vuelva a crear un vista si esta ya existe Agregue funcion que convierte el codigo de error sql en los catch para hacer un mensaje mas amigable que aplique a import casosEpidemi y cie10 Comence a cambiar casos cie-10 a eventos cie-10

--- a/view/css/sb-admin-2.css
+++ b/view/css/sb-admin-2.css
@@ -11001,3 +11001,26 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
+
+/*Para icono de losader en input de busqueda*/
+
+.inner-addon {
+  position: relative;
+}
+.inner-addon .fa-spin {
+  position: absolute;
+  padding: 10px;
+  pointer-events: none;
+}
+.left-addon .fa-spin {
+  left: 0px;
+}
+.right-addon .fa-spin {
+  right: 0px;
+}
+.left-addon input {
+  padding-left: 30px;
+}
+.right-addon input {
+  padding-right: 30px;
+}
